--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.9",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "react": "^19.0.0",
@@ -19,6 +20,8 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
+    "react-use": "^17.6.0",
+    "requirejs": "^2.3.7",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
